# api/swagger.json
@@ -859,7 +859,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/v3.CategoryCreate"
+                                "$ref": "#/definitions/v3.CategoryEditable"
                             }
                         }
                     }
@@ -1054,7 +1054,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v3.CategoryCreate"
+                            "$ref": "#/definitions/v3.CategoryEditable"
                         }
                     }
                 ],
@@ -1179,7 +1179,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/v3.EnvelopeCreate"
+                                "$ref": "#/definitions/v3.EnvelopeEditable"
                             }
                         }
                     }
@@ -1374,7 +1374,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v3.EnvelopeCreate"
+                            "$ref": "#/definitions/v3.EnvelopeEditable"
                         }
                     }
                 ],
@@ -3049,19 +3049,17 @@
                 }
             }
         },
-        "models.Envelope": {
+        "models.Category": {
             "type": "object",
             "properties": {
                 "archived": {
-                    "description": "Is the envelope archived?",
-                    "type": "boolean",
-                    "default": false,
-                    "example": true
+                    "type": "boolean"
                 },
-                "categoryId": {
-                    "description": "ID of the category the envelope belongs to",
-                    "type": "string",
-                    "example": "878c831f-af99-4a71-b3ca-80deb7d793c1"
+                "budget": {
+                    "$ref": "#/definitions/models.Budget"
+                },
+                "budgetID": {
+                    "type": "string"
                 },
                 "createdAt": {
                     "description": "Time the resource was created",
@@ -3079,14 +3077,50 @@
                     "example": "65392deb-5e92-4268-b114-297faad6cdce"
                 },
                 "name": {
-                    "description": "Name of the envelope",
-                    "type": "string",
-                    "example": "Groceries"
+                    "type": "string"
                 },
                 "note": {
-                    "description": "Notes about the envelope",
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "description": "Last time the resource was updated",
                     "type": "string",
-                    "example": "For stuff bought at supermarkets and drugstores"
+                    "example": "2022-04-17T20:14:01.048145Z"
+                }
+            }
+        },
+        "models.Envelope": {
+            "type": "object",
+            "properties": {
+                "archived": {
+                    "type": "boolean"
+                },
+                "category": {
+                    "$ref": "#/definitions/models.Category"
+                },
+                "categoryID": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "description": "Time the resource was created",
+                    "type": "string",
+                    "example": "2022-04-02T19:28:44.491514Z"
+                },
+                "deletedAt": {
+                    "description": "Time the resource was marked as deleted",
+                    "type": "string",
+                    "example": "2022-04-22T21:01:05.058161Z"
+                },
+                "id": {
+                    "description": "UUID for the resource",
+                    "type": "string",
+                    "example": "65392deb-5e92-4268-b114-297faad6cdce"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "note": {
+                    "type": "string"
                 },
                 "updatedAt": {
                     "description": "Last time the resource was updated",
@@ -3238,7 +3272,7 @@
                     "example": true
                 },
                 "balance": {
-                    "description": "These fields are calculated",
+                    "description": "These fields are computed",
                     "type": "number",
                     "example": 2735.17
                 },
@@ -3665,7 +3699,7 @@
                     "example": "2022-04-22T21:01:05.058161Z"
                 },
                 "envelopes": {
-                    "description": "Envelopes for the category",
+                    "description": "These fields are computed",
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/v3.Envelope"
@@ -3677,19 +3711,7 @@
                     "example": "65392deb-5e92-4268-b114-297faad6cdce"
                 },
                 "links": {
-                    "type": "object",
-                    "properties": {
-                        "envelopes": {
-                            "description": "Envelopes for this category",
-                            "type": "string",
-                            "example": "https://example.com/api/v3/envelopes?category=3b1ea324-d438-4419-882a-2fc91d71772f"
-                        },
-                        "self": {
-                            "description": "The category itself",
-                            "type": "string",
-                            "example": "https://example.com/api/v3/categories/3b1ea324-d438-4419-882a-2fc91d71772f"
-                        }
-                    }
+                    "$ref": "#/definitions/v3.CategoryLinks"
                 },
                 "name": {
                     "description": "Name of the category",
@@ -3708,7 +3730,24 @@
                 }
             }
         },
-        "v3.CategoryCreate": {
+        "v3.CategoryCreateResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "description": "List of the created Categories or their respective error",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/v3.CategoryResponse"
+                    }
+                },
+                "error": {
+                    "description": "The error, if any occurred",
+                    "type": "string",
+                    "example": "the specified resource ID is not a valid UUID"
+                }
+            }
+        },
+        "v3.CategoryEditable": {
             "type": "object",
             "properties": {
                 "archived": {
@@ -3731,23 +3770,6 @@
                     "description": "Notes about the category",
                     "type": "string",
                     "example": "All envelopes for long-term saving"
-                }
-            }
-        },
-        "v3.CategoryCreateResponse": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "description": "List of the created Categories or their respective error",
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/v3.CategoryResponse"
-                    }
-                },
-                "error": {
-                    "description": "The error, if any occurred",
-                    "type": "string",
-                    "example": "the specified resource ID is not a valid UUID"
                 }
             }
         },
@@ -3797,6 +3819,9 @@
                     "type": "string",
                     "example": "65392deb-5e92-4268-b114-297faad6cdce"
                 },
+                "links": {
+                    "$ref": "#/definitions/v3.CategoryLinks"
+                },
                 "name": {
                     "description": "Name of the category",
                     "type": "string",
@@ -3816,6 +3841,21 @@
                     "description": "Last time the resource was updated",
                     "type": "string",
                     "example": "2022-04-17T20:14:01.048145Z"
+                }
+            }
+        },
+        "v3.CategoryLinks": {
+            "type": "object",
+            "properties": {
+                "envelopes": {
+                    "description": "Envelopes for this category",
+                    "type": "string",
+                    "example": "https://example.com/api/v3/envelopes?category=3b1ea324-d438-4419-882a-2fc91d71772f"
+                },
+                "self": {
+                    "description": "The category itself",
+                    "type": "string",
+                    "example": "https://example.com/api/v3/categories/3b1ea324-d438-4419-882a-2fc91d71772f"
                 }
             }
         },
@@ -3916,7 +3956,24 @@
                 }
             }
         },
-        "v3.EnvelopeCreate": {
+        "v3.EnvelopeCreateResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "description": "Data for the Envelope",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/v3.EnvelopeResponse"
+                    }
+                },
+                "error": {
+                    "description": "The error, if any occurred",
+                    "type": "string",
+                    "example": "the specified resource ID is not a valid UUID"
+                }
+            }
+        },
+        "v3.EnvelopeEditable": {
             "type": "object",
             "properties": {
                 "archived": {
@@ -3939,23 +3996,6 @@
                     "description": "Notes about the envelope",
                     "type": "string",
                     "example": "For stuff bought at supermarkets and drugstores"
-                }
-            }
-        },
-        "v3.EnvelopeCreateResponse": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "description": "Data for the Envelope",
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/v3.EnvelopeResponse"
-                    }
-                },
-                "error": {
-                    "description": "The error, if any occurred",
-                    "type": "string",
-                    "example": "the specified resource ID is not a valid UUID"
                 }
             }
         },
